# storing-key

./: .gitignore  README.md  pyproject.toml
src/storing_key/: __init__.py  cli.py  cmd.py  main.py
src/storing_key/db/: crud.py  models.py  schemas.py
src/storing_key/static/styles/: styles.css
src/storing_key/templates/: add_secret.html  add_user.html  delete_secret.html  home_page.html  index.html  list_keys.html  show_key.html
src/storing_key/utils/: authorization.py
tests/test_cmd/: test_cmd.py
