[tool.poetry]
name = "storing_key"
version = "0.1.0"
description = "App for storing secrets"
authors = ["Salvatore Albore <salvatore.albore@gmail.com>"]
license = "Proprietary"
packages = [ 
    { include = "src" },
    { include = "storing_key", from="src" } 
]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.37"
cryptography = "^37.0.2"
pydantic = "^1.9.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = {extras = ["all"], version = "^0.79.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
